feat: add api spec
